windows cmake fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )
 
 add_compile_options(-std=c++11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -v")
-set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -v")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 set(LINKLIBS)
 set(SOURCE_FILES main.cpp include/RtAudio.h)
@@ -10,15 +9,17 @@ set(BIN_NAME cogdevcam)
 
 project(HY_LAB_CAM_SYNC)
 
-find_package(OpenCV REQUIRED)
-find_package(Boost 1.55.0 COMPONENTS program_options REQUIRED system REQUIRED filesystem REQUIRED date_time REQUIRED)
-
 set(Boost_USE_STATIC_LIBS    ON)
 set(Boost_USE_MULTITHREADED  ON)
 set(Boost_USE_STATIC_RUNTIME ON)
 
+find_package(OpenCV REQUIRED)
+find_package(Boost 1.55.0 COMPONENTS program_options REQUIRED system REQUIRED filesystem REQUIRED date_time REQUIRED)
+
 if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-    list(APPEND LINKLIBS lib/rtaudio_static lib/dsound)
+    find_library(RTAUDIO rtaudio_static lib $ENV{RTAUDIO})
+    find_library(DSOUND dsound lib)
+    list(APPEND LINKLIBS ${RTAUDIO} ${DSOUND})
     list(APPEND SOURCE_FILES include/dsound.h)
     include_directories(${OpenCV_INCLUDE_DIRS} $ENV{OpenCV_DIR}/../../../include ${Boost_INCLUDE_DIRS})
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
@@ -39,5 +40,7 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     set(CMAKE_CXX_FLAGS_RELEASE "/MT")
     set(CMAKE_CXX_FLAGS_DEBUG "/MTd")
 endif()
+
+set(CMAKE_BUILD_TYPE Release)
 
 # cmake -G "Visual Studio 12 2013 Win64"
