--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     find_library(DSOUND dsound lib)
     list(APPEND LINKLIBS ${RTAUDIO} ${DSOUND})
     list(APPEND SOURCE_FILES include/dsound.h)
-    include_directories(${OpenCV_INCLUDE_DIRS} $ENV{OpenCV_DIR}/../../../include ${Boost_INCLUDE_DIRS} ${INCLUDES})
+    include_directories(${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${INCLUDES})
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     find_library(RTAUDIO rtaudio_static HINTS usr/local/lib $ENV{RTAUDIO} lib)
     find_library(COREAUDIO_LIB CoreAudio)
