--- a/cam_opts.cfg
+++ b/cam_opts.cfg
@@ -1,5 +1,6 @@
 # Enter options here to override defaults
 usb = 0
+aud = 0
 # Example url
 #url=http://username:password@ipaddress/axis-cgi/mjpg/video.cgi?resolution=1280x800&.mjpg
 #url=http://96.10.1.168//axis-cgi/mjpg/video.cgi?resolution=640x480&.mjpg
