--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
-# QT Creator
-*.txt.user
+.clang-format
 .DS_Store
-lib/**
-include/RtAudio.h
+.idea/
+.vs/
+.vscode/
+*.txt.user
+bin/
+build/
+cmake-build-debug/
+cmake-build-release/
 include/dsound.h
-.idea
-bin
+include/RtAudio.h
+install.d/
+install/
+junk/
+tools/ffmpeg
+vsbuild/
