--- a/cam_opts.cfg
+++ b/cam_opts.cfg
@@ -1,33 +1,46 @@
+# Program options
 verbose=0
 dir=test
 fname=temp
-usb=0
-url=http://plazacam.studentaffairs.duke.edu/axis-cgi/mjpg/video.cgi?resolution=640x480&.mjpg
+
+# Video options
 codec=MJPG
 ext=.avi
-fps=240
-fbl=5
-vtries=1
+fps=20
+vsync=0
+dfps=10
+vtries=3
+
+# USB devices
+usb=0
+CAP_PROP_FPS=30
+
+usb=1
+CAP_PROP_FPS=30
+
+# Audio options
 abuffer=1024
 abits=16
+aforsec=5
 alate=1
 ahog=1
+
+# -- Audio input
 ain=-1
 aisr=48000
 aich=1
-aforsec=5
+
+# -- Audio output
 aout=0
 aosr=48000
-aomode=pulse
 aoch=1
-apulse=1000
-apwidth=5
+aomode=pulse
+apulse=120
+apwidth=3
 aplaywav=1
 
 
-# Example url
-#https://www.insecam.org/
-#url=http://username:password@ipaddress/axis-cgi/mjpg/video.cgi?resolution=1280x800&.mjpg
-#url=http://96.10.1.168//axis-cgi/mjpg/video.cgi?resolution=640x480&.mjpg
-#http://108.50.203.80:8083/view/viewer_index.shtml?id=8943
-# -DWITH_OPENCV=TRUE -DWITH_BOOST=TRUE -DWITH_RTAUDIO=TRUE -DCUSTOM_LIB_ROOT=C:\Users\josep\libs -DCOMPILER_SUBDIR=gcc
+# Example urls. see here for some addressess to test https://www.insecam.org/
+# url=http://username:password@ipaddress/axis-cgi/mjpg/video.cgi?resolution=1280x800&.mjpg
+# url=http://96.10.1.168//axis-cgi/mjpg/video.cgi?resolution=640x480&.mjpg
+# url=http://108.50.203.80:8083/view/viewer_index.shtml?id=8943
